# localhostGPT

./: .gitignore  LICENSE  README.md  electron.vite.config.ts  package.json  pyproject.toml  requirements.txt
backend/: app.py  schema.py
backend/config/: prompts.py  settings.py
backend/core/: chat_chunker.py  chat_retriever.py  inference_engine.py  query_classifier.py  retriever.py  tensorlink_manager.py  web_scraper.py
backend/routers/: chat.py  model.py  tensorlink.py
resources/: welcomeChat.md
src/main/: index.ts
src/main/lib/: index.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx
src/renderer/src/components/: ActionButtonsRow.tsx  AppLayout.tsx  ChatPreview.tsx  ChatPreviewList.tsx  ChatSettings.tsx  FineTuningView.tsx  FloatingChatTitle.tsx  Interface.tsx  MessageInput.tsx  MessageList.tsx  SettingsView.tsx  index.ts
src/renderer/src/components/Button/: ActionButton.tsx  DeleteChatButton.tsx  FineTuningButton.tsx  NewChatButton.tsx  SettingsButton.tsx  index.ts
src/renderer/src/hooks/: useChat.tsx  useChatSettings.tsx  useChatsList.tsx  useInterface.tsx  useMessages.tsx
src/renderer/src/services/: api.tsx
src/renderer/src/store/: index.ts
src/renderer/src/store/mocks/: index.ts
src/renderer/src/types/: chat.tsx
src/shared/: constants.ts  models.ts  types.ts
