[project]
name = "localhost-gpt"
version = "0.1.0"
description = "A desktop application for running and fine-tuning language models and other AI models. Built on the peer-to-peer architecture of Tensorlink, localhostGPT enables users to access large, personalized models with memory, all while preserving personal data. This application combines cloud-level performance with the ownership and customization of local computing."
authors = [
    {name = "mattjhawken",email = "mattjhawken@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)", 
    "requests (>=2.32.3,<3.0.0)", 
    "markdown (>=3.8,<4.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "requests-html (>=0.10.0,<0.11.0)",
    "lxml-html-clean (>=0.4.2,<0.5.0)",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
